--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,6 +536,142 @@ nav form button.btn:hover {
 /* ===== _part start ===== */
 
 /* ===== _part end ===== */
-/* ===== _part start ===== */
+/* Instructor page start*/
+#top-instructors {
+  background-color: #05a5be;
+  color: var(--primary-color);
+  position: relative;
+  z-index: 1;
+}
+#top-instructors img {
+  border-radius: 50%;
+}
+#top-instructors .card {
+  background-color: #d6e8db;
+}
+#top-instructors .star i {
+  color: rgb(255, 0, 0);
+  font-size: large;
+}
+#all-instructor a,
+#top-instructors a {
+  display: inline-block;
+  background-color: var(--primary-bgcolor);
+  padding: 10px 16px;
+  border: 1px solid var(--primary-bgcolor);
+  color: var(--primary-color);
+  border-radius: 20px;
+  font-size: 13px;
+  text-transform: uppercase;
+  transition: 0.4s;
+}
+#all-instructor a:hover,
+#top-instructors a:hover {
+  background-color: var(--secondary-bgcolor);
+  border: 1px solid var(--secondary-bgcolor);
+}
+#all-instructor button {
+  color: var(--primary-color);
+}
+/* Instructor page end*/
 
-/* ===== _part end ===== */
+/* Instructor details page start*/
+#details-part h1 {
+  font-family: cursive;
+  color: #05a5be;
+}
+#details-part img {
+  position: relative;
+  margin-top: 100px;
+  border-radius: 50%;
+  border: 5px solid rgb(133, 121, 116);
+}
+
+/* skill progress bar start here */
+#details-part .skill-bar {
+  background-color: #dfc7c7;
+  padding: 30px;
+  word-spacing: 5px;
+  margin: 3px;
+}
+#details-part .skill-bar li {
+  padding: 10px;
+  margin: 30px 0;
+  list-style-type: none;
+  font-weight: bolder;
+  text-transform: uppercase;
+  position: relative;
+  color: var(--secondary-color);
+}
+.skill-bar li::before {
+  content: "";
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  background-color: rgb(162, 159, 155);
+  width: 100%;
+  height: 25px;
+  border-radius: 100px;
+}
+.skill-bar li::after {
+  content: " ";
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+
+  background-color: rgb(249, 249, 250);
+  width: 0%;
+  height: 25px;
+  border-radius: 1000px;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-delay: 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+.skill-bar li.web::after {
+  animation-name: web;
+}
+@keyframes web {
+  to {
+    width: 90%;
+    background-color: #003399;
+  }
+}
+.skill-bar li.wordpress::after {
+  animation-name: wordpress;
+}
+@keyframes wordpress {
+  to {
+    width: 80%;
+    background-color: #003399;
+  }
+}
+.skill-bar li.php::after {
+  animation-name: php;
+}
+@keyframes php {
+  to {
+    width: 90%;
+    background-color: #003399;
+  }
+}
+.skill-bar li.js::after {
+  animation-name: js;
+}
+@keyframes js {
+  to {
+    width: 60%;
+    background-color: #003399;
+  }
+}
+.skill-bar li.graphics::after {
+  animation-name: graphics;
+}
+@keyframes graphics {
+  to {
+    width: 70%;
+    background-color: #003399;
+  }
+}
+/* Instructor details page end*/
