--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,10 +239,16 @@ nav form button.btn:hover {
   border: 1px solid var(--primary-bgcolor);
   margin-top: 35px;
   min-height: 362px;
+  border-radius: 20px;
+  overflow: hidden;
   transition: 0.4s;
 }
 .single-course:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.single-course .course-img img {
+  height: 155px;
+  width: 100%;
 }
 #top-course-part .course-details {
   padding: 10px 12px;
@@ -251,6 +257,7 @@ nav form button.btn:hover {
   text-transform: capitalize;
   font-size: 24px;
   margin-bottom: 5px;
+  height: 58px;
 }
 #top-course-part .course-details p {
   text-transform: capitalize;
@@ -270,6 +277,7 @@ nav form button.btn:hover {
   color: #ffffff;
   padding: 5px 7px;
   text-transform: capitalize;
+  border-radius: 7px;
 }
 .course-btn:hover {
   background-color: var(--secondary-bgcolor);
@@ -359,7 +367,7 @@ nav form button.btn:hover {
 .card-button a {
   font-size: 18px;
   margin-top: 30px;
-  padding: 15px 20px;
+  padding: 10px 20px;
   background-color: var(--primary-bgcolor);
   color: var(--primary-color);
   border: 1px solid var(--primary-bgcolor);
@@ -375,12 +383,53 @@ nav form button.btn:hover {
 #top-instructor {
   background-color: #fffbee;
 }
-
+.instructor-box {
+  border-radius: 15px !important;
+  overflow: hidden;
+  padding: 25px 15px;
+  margin-top: 35px;
+}
+.instructor-box .instructor-box-img {
+  text-align: center !important;
+}
+.instructor-box .instructor-box-img img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.instructor-box .instructor-box-content {
+  margin-top: 15px;
+}
+.instructor-box .instructor-box-content span {
+  color: var(--secondary-color);
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.instructor-box .instructor-box-content h5 {
+  color: var(--secondary-color);
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+.instructor-box .instructor-box-content p {
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: var(--secondary-color);
+}
+.instructor-box .instructor-box-content a {
+  color: var(--primary-bgcolor);
+  text-transform: capitalize;
+  transition: 0.4s;
+}
+.instructor-box .instructor-box-content a:hover {
+  color: var(--secondary-bgcolor);
+}
 /* ===== top-instructor_part end ===== */
 /* ===== news-events_part start ===== */
 .news-box {
   margin-top: 35px;
   transition: 0.4s;
+  border-radius: 70px 0;
+  overflow: hidden;
 }
 .news-box:hover {
   transform: scale(1.02);
@@ -431,6 +480,32 @@ nav form button.btn:hover {
   color: var(--primary-color);
   margin-top: 15px;
   font-size: 16px;
+}
+.subscribe {
+  margin-top: 10px;
+}
+.subscribe input {
+  padding: 5px 8px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  width: 80%;
+  font-size: 16px;
+}
+
+.subscribe button {
+  width: 16%;
+  font-size: 16px;
+  padding: 5px 8px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  background: #fff;
+  color: var(--secondary-color) !important;
+  transition: 0.4s;
+}
+.subscribe button:hover {
+  color: var(--secondary-bgcolor) !important;
 }
 .address-part h4,
 .footer-links h4 {
@@ -494,6 +569,47 @@ nav form button.btn:hover {
 }
 .address-part address {
   color: #ffffff;
+}
+.message {
+  margin-top: 15px;
+}
+.message textarea {
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  font-size: 16px;
+}
+.message button {
+  width: 16%;
+  font-size: 16px;
+  padding: 13px 8px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  background: #fff;
+  color: var(--secondary-color) !important;
+  transition: 0.4s;
+}
+.message button:hover {
+  color: var(--secondary-bgcolor) !important;
+}
+/* .subscribe text {
+  padding: 5px 8px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  width: 80%;
+  font-size: 16px;
+} */
+.address-part textarea {
+  /* height: 34px; */
+  padding: 5px 8px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  width: 80%;
+  font-size: 16px;
+  display: inline-block;
 }
 /* ===== footer_part end ===== */
 /* ===== copyright_part start ===== */
