--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ label {
 :root {
   --primary-bgcolor: #0086dc;
   --secondary-bgcolor: #ff6600;
+  --section-bgcolor: #fffbee;
   --primary-color: #ffffff;
   --secondary-color: #6b6b6b;
 }
@@ -60,7 +61,37 @@ label {
   background-color: var(--secondary-bgcolor);
   border: 1px solid var(--secondary-bgcolor);
 }
-
+.owl-next,
+.owl-prev {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--secondary-bgcolor) !important;
+  position: absolute;
+  bottom: 35%;
+}
+.owl-prev {
+  left: 20px;
+}
+.owl-next {
+  right: 20px;
+}
+.owl-prev span,
+.owl-next span {
+  font-size: 40px;
+  color: var(--secondary-bgcolor);
+  margin-top: -3px;
+}
+.owl-theme .owl-nav [class*="owl-"]:hover {
+  background: transparent;
+  color: #fff;
+  text-decoration: none;
+}
+.owl-theme .owl-nav [class*="owl-"] {
+  border-radius: 50%;
+}
 /* 
 font-family: 'Playfair Display', serif;
 font-family: 'Roboto', sans-serif;
@@ -214,6 +245,9 @@ nav form button.btn:hover {
 }
 /* ===== statistics_part end ===== */
 /* ===== setyourgoal-part_part start ===== */
+#your-goal {
+  background-color: var(--section-bgcolor);
+}
 .goal-item {
   padding: 30px 40px;
   border: 1px solid var(--primary-bgcolor);
@@ -234,23 +268,6 @@ nav form button.btn:hover {
   color: var(--primary-color);
 }
 
-.owl-prev {
-  position: absolute;
-  left: 20px;
-  bottom: 28%;
-}
-.owl-next {
-  position: absolute;
-  right: 20px;
-  bottom: 28%;
-}
-.owl-prev span,
-.owl-next span {
-  font-size: 60px;
-  color: var(--secondary-bgcolor);
-  width: 40px;
-  display: inline-block;
-}
 /* ===== setyourgoal-part_part end ===== */
 /* ===== top-course_part start ===== */
 .single-course {
@@ -296,6 +313,7 @@ nav form button.btn:hover {
   padding: 5px 7px;
   text-transform: capitalize;
   border-radius: 7px;
+  transition: 0.4s;
 }
 .course-btn:hover {
   background-color: var(--secondary-bgcolor);
@@ -430,6 +448,8 @@ nav form button.btn:hover {
   overflow: hidden;
   padding: 25px 15px;
   margin-top: 35px;
+  cursor: pointer;
+  transition: 0.4s;
 }
 .instructor-box .instructor-box-img {
   text-align: center !important;
@@ -465,8 +485,121 @@ nav form button.btn:hover {
 .instructor-box .instructor-box-content a:hover {
   color: var(--secondary-bgcolor);
 }
+.instructor-box:hover {
+  transform: scale(1.02);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 /* ===== top-instructor_part end ===== */
+
+/* ===== membership_part start ===== */
+#membership-part .card {
+  position: relative;
+  max-width: 350px;
+  height: auto;
+  background: linear-gradient(-45deg, #fe0847, #feae3f);
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  overflow: hidden;
+}
+
+#membership-part .card:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+#membership-part .col-md-4:nth-child(1) .card,
+#membership-part .col-md-4:nth-child(1) .card .title .fa {
+  background: linear-gradient(-45deg, #f403d1, #64b5f6);
+}
+
+#membership-part .col-md-4:nth-child(2) .card,
+#membership-part .col-md-4:nth-child(2) .card .title .fa {
+  background: linear-gradient(-45deg, #ffec61, #f321d7);
+}
+
+#membership-part .col-md-4:nth-child(3) .card,
+#membership-part .col-md-4:nth-child(3) .card .title .fa {
+  background: linear-gradient(-45deg, #24ff72, #9a4eff);
+}
+
+#membership-part .card:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background: rgba(255, 255, 255, 0.1);
+  z-index: 1;
+  transform: skewY(-5deg) scale(1.5);
+  -webkit-transform: skewY(-5deg) scale(1.5);
+  -moz-transform: skewY(-5deg) scale(1.5);
+  -ms-transform: skewY(-5deg) scale(1.5);
+  -o-transform: skewY(-5deg) scale(1.5);
+}
+
+.membership-box {
+  margin-top: 35px;
+}
+.membership-box .title {
+  font-size: 28px;
+  margin-bottom: 25px;
+  color: #fff;
+}
+.membership-box .price h4 {
+  margin: 0;
+  font-size: 60px;
+  color: #fff;
+}
+.membership-box .option ul li {
+  margin: 0 0 10px;
+  padding: 0;
+  list-style: none;
+  color: #fff;
+  font-size: 16px;
+}
+.membership-box .option ul li i {
+  margin-right: 7px;
+}
+.membership-box a {
+  position: relative;
+  z-index: 2;
+  background: #fff;
+  color: #262626;
+  width: 150px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 40px;
+  display: block;
+  text-align: center;
+  margin: 20px auto 0;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+/* ===== membership_part end ===== */
 /* ===== news-events_part start ===== */
+#news-events-part {
+  background-color: var(--section-bgcolor);
+}
 .news-box {
   margin-top: 35px;
   transition: 0.4s;
@@ -697,7 +830,7 @@ nav form button.btn:hover {
   background-color: #d6e8db;
 }
 #top-instructors .star i {
-  color: rgb(255, 0, 0);
+  color: var(--secondary-bgcolor);
   font-size: large;
 }
 #all-instructor a,
