--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,7 +490,33 @@ nav form button.btn:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 /* ===== top-instructor_part end ===== */
-
+/* ===== support_part start ===== */
+.support-item-box {
+  padding: 30px 15px;
+  border-radius: 15px;
+  margin-top: 35px;
+  transition: 0.4s;
+}
+.support-item-box .support-item-img img {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 15px;
+}
+.support-item-box h3 {
+  font-size: 22px;
+  height: 50px;
+  color: var(--secondary-color);
+  margin-bottom: 10px;
+}
+.support-item-box p {
+  font-size: 18px;
+  color: var(--secondary-color);
+}
+.support-item-box:hover {
+  transform: scale(1.02);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+/* ===== support_part end ===== */
 /* ===== membership_part start ===== */
 #membership-part .card {
   position: relative;
